--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "Simple ECS Fargate demo app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo All tests passed!"
+  },
+  "dev": "node --env-file=.env --watch src/index.js",
+  "author": "Lukas",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0",
+    "pg": "^8.14.1",
+    "zod": "^3.24.2"
   }
-}
+}	
