--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,35 +38,22 @@ jobs:
 
       - name: Validate ECS environment variables
         run: |
-          echo "Validating ECS environment variables..."
-          if [ -z "$ECS_CLUSTER" ]; then
-            echo "Error: ECS_CLUSTER is not set!"
-            exit 1
-          fi
-          if [ -z "$ECS_SERVICE" ]; then
-            echo "Error: ECS_SERVICE is not set!"
-            exit 1
-          fi
-          if [ -z "$ECS_TASK_DEFINITION" ]; then
-            echo "Error: ECS_TASK_DEFINITION is not set!"
-            exit 1
-          fi
-          echo "ECS_CLUSTER: '$ECS_CLUSTER'"
-          echo "ECS_SERVICE: '$ECS_SERVICE'"
-          echo "ECS_TASK_DEFINITION: '$ECS_TASK_DEFINITION'"
+          if [ -z "$ECS_CLUSTER" ]; then echo "ECS_CLUSTER not set!"; exit 1; fi
+          if [ -z "$ECS_SERVICE" ]; then echo "ECS_SERVICE not set!"; exit 1; fi
+          if [ -z "$ECS_TASK_DEFINITION" ]; then echo "ECS_TASK_DEFINITION not set!"; exit 1; fi
+          echo "ECS_CLUSTER='$ECS_CLUSTER'"
+          echo "ECS_SERVICE='$ECS_SERVICE'"
+          echo "ECS_TASK_DEFINITION='$ECS_TASK_DEFINITION'"
 
       - name: Debug AWS Region
-        run: |
-          echo "AWS Region: $AWS_REGION"
+        run: echo "AWS Region: $AWS_REGION"
 
       - name: Fetch current task definition
-        id: fetch-task
         run: |
           aws ecs describe-task-definition \
             --task-definition "$ECS_TASK_DEFINITION" \
             --region "${{ vars.AWS_REGION }}" \
-            --query 'taskDefinition' \
-            > task-def.json
+            --query 'taskDefinition' > task-def.json
 
       - name: Update container image
         run: |
@@ -84,11 +71,9 @@ jobs:
                 .tags
               )
           ' task-def.json)
-
           echo "$UPDATED_TASK_DEF" > new-task-def.json
 
       - name: Register new task definition
-        id: register-task
         run: |
           NEW_TASK_ARN=$(aws ecs register-task-definition \
             --cli-input-json file://new-task-def.json \
@@ -97,7 +82,6 @@ jobs:
             --region "${{ vars.AWS_REGION }}")
           echo "NEW_TASK_ARN=$NEW_TASK_ARN" >> $GITHUB_ENV
 
-          # Extract family and revision to use in update-service
           NEW_TASK_FAMILY=$(aws ecs describe-task-definition \
             --task-definition "$NEW_TASK_ARN" \
             --query 'taskDefinition.family' \
@@ -113,16 +97,11 @@ jobs:
           NEW_TASK_FAMILY_REVISION="${NEW_TASK_FAMILY}:${NEW_TASK_REVISION}"
           echo "NEW_TASK_FAMILY_REVISION=$NEW_TASK_FAMILY_REVISION" >> $GITHUB_ENV
 
-      - name: Debug ECS vars before update-service
+      - name: Hex dump ECS variables to catch hidden chars
         run: |
-          echo "Cluster length: ${#ECS_CLUSTER}"
-          echo "Service length: ${#ECS_SERVICE}"
-          echo "Task Definition ARN length: ${#NEW_TASK_ARN}"
-          echo "Task Definition Family:Revision length: ${#NEW_TASK_FAMILY_REVISION}"
-          echo "Cluster raw: '${ECS_CLUSTER}'"
-          echo "Service raw: '${ECS_SERVICE}'"
-          echo "Task Definition ARN raw: '${NEW_TASK_ARN}'"
-          echo "Task Definition Family:Revision raw: '${NEW_TASK_FAMILY_REVISION}'"
+          printf "ECS_CLUSTER (hex):\n"; printf "%s" "$ECS_CLUSTER" | od -c
+          printf "ECS_SERVICE (hex):\n"; printf "%s" "$ECS_SERVICE" | od -c
+          printf "NEW_TASK_FAMILY_REVISION (hex):\n"; printf "%s" "$NEW_TASK_FAMILY_REVISION" | od -c
 
       - name: Update ECS service
         run: |
